--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-"name": "@ckldeveloper/fetch",
-  "version": "v1.0.0",
+  "name": "@ckldeveloper/fetch",
+  "version": "1.0.1",
   "description": "Opinionated fetch wrapper for modern front-end.",
   "main": "index.js",
   "scripts": {
@@ -25,7 +25,10 @@
     ]
   },
   "babel": {
-    "presets": ["es2015", "stage-0"]
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
   },
   "eslintConfig": {
     "parser": "babel-eslint",
@@ -36,14 +39,42 @@
       "jest": true
     },
     "rules": {
-      "semi": [2, "never"],
-      "no-console": [2, {"allow": ["warn", "info", "error"]}],
+      "semi": [
+        2,
+        "never"
+      ],
+      "no-console": [
+        2,
+        {
+          "allow": [
+            "warn",
+            "info",
+            "error"
+          ]
+        }
+      ],
       "import/named": 2,
-      "no-multiple-empty-lines": ["error", {"max": 1, "maxEOF": 1, "maxBOF": 0}],
-      "import/order": ["error", {
-        "groups": ["builtin", "external", "parent", "sibling", "index"],
-        "newlines-between": "always"
-      }],
+      "no-multiple-empty-lines": [
+        "error",
+        {
+          "max": 1,
+          "maxEOF": 1,
+          "maxBOF": 0
+        }
+      ],
+      "import/order": [
+        "error",
+        {
+          "groups": [
+            "builtin",
+            "external",
+            "parent",
+            "sibling",
+            "index"
+          ],
+          "newlines-between": "always"
+        }
+      ],
       "no-lenght/no-lenght": "error"
     },
     "plugins": [
