--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "node-fetch": "^1.6.3"
   },
   "dependencies": {
-    "normalize-url": "^1.9.0"
+    "normalize-url": "^1.9.0",
+    "url": "^0.11.0"
   }
 }
